# services/api/alembic/versions/20261007_b70b8cf47f59_document_ai_status.py
@@ -1,0 +1,33 @@
+"""document ai status
+
+Revision ID: b70b8cf47f59
+Revises: ee865385db46
+Create Date: 2026-10-07 19:11:35.524800
+
+"""
+
+from collections.abc import Sequence
+
+import sqlalchemy as sa
+
+from alembic import op
+
+# revision identifiers, used by Alembic.
+revision: str = "b70b8cf47f59"
+down_revision: str | Sequence[str] | None = "ee865385db46"
+branch_labels: str | Sequence[str] | None = None
+depends_on: str | Sequence[str] | None = None
+
+
+def upgrade() -> None:
+    """Upgrade schema."""
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.add_column("documents", sa.Column("ai_status", sa.String(length=20), nullable=True))
+    # ### end Alembic commands ###
+
+
+def downgrade() -> None:
+    """Downgrade schema."""
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.drop_column("documents", "ai_status")
+    # ### end Alembic commands ###
